# Parallax Static Timing Analyzer
# Copyright (c) 2018, Parallax Software, Inc.
# All rights reserved.
# 
# No part of this document may be copied, transmitted or
# disclosed in any form or fashion without the express
# written consent of Parallax Software, Inc.

EXTRA_DIST = \
	ApiChanges.txt \
	BugLog \
	CodingGuidelines.txt \
	OpenSTA.odt \
	OpenSTA.pdf \
	StaApi.txt

libs:

xtags:
